--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: GrymExamples
 Title: Examples for the R implementation of the Generalized Yield Model
-Version: 0.1.0.9000
+Version: 0.1.0.0000
 Authors@R: c(
-    person(given = "Simon", family = "Wotherspoon", ,  email = "Simon.Wotherspoon@utas.edu.au", role = "aut"),
     person(given = "Dale", family = "Maschette", ,  email = "Dale.Maschette@utas.edu.au", role = c("aut", "cre")),
+    person(given = "Simon", family = "Wotherspoon", ,  email = "Simon.Wotherspoon@utas.edu.au", role = "aut"))
 Description: Grym is an R implementation of the Generalized Yield Model (GYM),
     a flexible model for fish stock projection (Constable and de la Mare 1996).
     When citing please cite both the package [citation("Grym")] and (Constable and de la Mare 1996).
@@ -13,9 +13,10 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
-Date: 2020-05-15
+Date: 2020-06-01
 Imports:
-    Grym
+    Grym, 
+    furrr (>= 0.1.0)
 Suggests: 
     knitr,
     rmarkdown,
